package fpt.project.NeoNHS.service.impl;

import com.google.api.client.googleapis.auth.oauth2.GoogleIdToken;
import fpt.project.NeoNHS.dto.request.auth.ChangePasswordRequest;
import fpt.project.NeoNHS.constants.EmailTemplate;
import fpt.project.NeoNHS.dto.request.auth.LoginRequest;
import fpt.project.NeoNHS.dto.request.auth.RegisterRequest;
import fpt.project.NeoNHS.dto.response.AuthResponse;
import fpt.project.NeoNHS.dto.response.auth.UserInfoResponse;
import fpt.project.NeoNHS.entity.User;
import fpt.project.NeoNHS.enums.UserRole;
import fpt.project.NeoNHS.exception.BadRequestException;
import fpt.project.NeoNHS.exception.RequestGoogleAccountException;
import fpt.project.NeoNHS.helpers.GoogleTokenVerifier;
import fpt.project.NeoNHS.repository.UserRepository;
import fpt.project.NeoNHS.security.JwtTokenProvider;
import fpt.project.NeoNHS.security.UserPrincipal;
import fpt.project.NeoNHS.service.AuthService;
import fpt.project.NeoNHS.service.MailService;
import fpt.project.NeoNHS.service.RedisAuthService;
import lombok.RequiredArgsConstructor;

import org.springframework.beans.factory.annotation.Value;
import org.springframework.security.authentication.AuthenticationManager;
import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
import org.springframework.security.core.Authentication;
import org.springframework.security.core.context.SecurityContextHolder;
import org.springframework.security.crypto.password.PasswordEncoder;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

import java.time.LocalDateTime;
import java.util.Random;
import java.util.UUID;

@Service
@RequiredArgsConstructor
public class AuthServiceImpl implements AuthService {

    private final AuthenticationManager authenticationManager;
    private final UserRepository userRepository;
    private final PasswordEncoder passwordEncoder;
    private final JwtTokenProvider jwtTokenProvider;
    private final GoogleTokenVerifier googleTokenVerifier;
    private final MailService mailService;
    private final RedisAuthService redisAuthService;

    @Value("${app.fe-url}")
    private String appUrl;

    @Override
    public AuthResponse login(LoginRequest request) {
        Authentication authentication = authenticationManager.authenticate(
                new UsernamePasswordAuthenticationToken(
                        request.getEmail(),
                        request.getPassword()));

        SecurityContextHolder.getContext().setAuthentication(authentication);

        UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
        User user = userRepository.findById(userPrincipal.getId()).orElseThrow();

        String googleAuthDefaultPassword = passwordEncoder.encode("google_oauth2_user");
        if (user.getPasswordHash().equals(googleAuthDefaultPassword)) {
            throw new RequestGoogleAccountException();
        }

        if (!user.getIsActive()) {
            throw new BadRequestException("not activated");
        }

        return getAuthResponse(user, authentication);
    }

    @Override
    @Transactional
    public AuthResponse register(RegisterRequest request) {
        if (userRepository.existsByEmail(request.getEmail())) {
            throw new BadRequestException("Email already exists");
        }

        if (request.getPhoneNumber() != null && !isValidPhoneNumber(request.getPhoneNumber())) {
            throw new BadRequestException("Invalid phone number format");
        }

        validatePassword(request.getPassword());

        User user = User.builder()
                .fullname(request.getFullname())
                .email(request.getEmail())
                .passwordHash(passwordEncoder.encode(request.getPassword()))
                .phoneNumber(request.getPhoneNumber())
                .role(UserRole.TOURIST)
                .isActive(false)
                .build();

        userRepository.save(user);

        String verifyToken = generateVerifyToken();
        redisAuthService.saveOtp(user.getEmail(), verifyToken);
        mailService.sendVerifyEmailAsync(user, EmailTemplate.VERIFY_ACCOUNT, verifyToken, appUrl);
        return AuthResponse.builder()
                .accessToken(null)
                .tokenType("Bearer")
                .userInfo(null)
                .build();
    }

    private boolean isValidPhoneNumber(String phone) {
        return phone != null && phone.matches("^0[0-9]{9}$");
    }

    @Override
    public void sendVerifyEmail(String email) {
        User user = userRepository.findByEmail(email)
                .orElseThrow(() -> new BadRequestException("User not found"));
        String verifyToken = generateVerifyToken();
        redisAuthService.saveOtp(user.getEmail(), verifyToken);
        mailService.sendVerifyEmailAsync(user, EmailTemplate.VERIFY_ACCOUNT, verifyToken, appUrl);
    }

    private String generateVerifyToken() {
        return String.valueOf(new Random().nextInt(100000, 999999));
    }

    @Override
    public AuthResponse googleLogin(String idToken) {
        try {
            GoogleIdToken.Payload result = googleTokenVerifier.verify(idToken);
            System.out.println("[AuthServiceImpl] Google ID Token payload email: " + result.getEmail());
            User user = userRepository.findByEmail(result.getEmail())
                    .orElseGet(() -> createUserFromGooglePayload(result));
            UserPrincipal userPrincipal = UserPrincipal.create(user);
            Authentication authentication = new UsernamePasswordAuthenticationToken(
                    userPrincipal,
                    null,
                    userPrincipal.getAuthorities());

            return getAuthResponse(user, authentication);
        } catch (Exception e) {
            System.out.println("[AuthServiceImpl] Google login failed: " + e.getMessage());
            throw new BadRequestException("Google login failed: " + e.getMessage());
        }
    }

    public void sendTestEmail() {
        User u = User.builder()
                .fullname("Test User")
                .email("phamminhkiet24@gmail.com")
                .role(UserRole.TOURIST)
                .avatarUrl("defaultAvatar.png")
                .passwordHash(passwordEncoder.encode("test_password"))
                .isActive(true)
                .createdAt(LocalDateTime.now())
                .build();
        mailService.sendVerifyEmailAsync(u, EmailTemplate.VERIFY_ACCOUNT, generateVerifyToken(), appUrl);
    }

    public void verifyOtp(String email, String otp) {
        redisAuthService.verifyOtp(email, otp);
        User user = userRepository.findByEmail(email)
                .orElseThrow(() -> new BadRequestException("User not found"));
        user.setIsActive(true);
        userRepository.save(user);
    }

    /**
     * Generate AuthResponse containing JWT token, refresh token and user info
     * 
     * @param user
     * @param authentication
     * @return
     */
    private AuthResponse getAuthResponse(User user, Authentication authentication) {
        SecurityContextHolder.getContext().setAuthentication(authentication);
        String token = jwtTokenProvider.generateToken(authentication);
        String refreshToken = jwtTokenProvider.generateRefreshToken();
        redisAuthService.saveRefreshToken(refreshToken, user.getId().toString(), UUID.randomUUID().toString());
        return AuthResponse.builder()
                .accessToken(token)
                .refreshToken(refreshToken)
                .tokenType("Bearer")
                .userInfo(UserInfoResponse.builder()
                        .id(user.getId())
                        .email(user.getEmail())
                        .fullname(user.getFullname())
                        .phoneNumber(user.getPhoneNumber())
                        .role(user.getRole())
                        .avatarUrl(user.getAvatarUrl())
                        .isActive(user.getIsActive())
                        .isVerified(user.getIsVerified())
                        .createdAt(user.getCreatedAt())
                        .updatedAt(user.getUpdatedAt())
                        .isBanned(user.getIsBanned())
                        .updatedAt(user.getUpdatedAt())
                        .phoneNumber(user.getPhoneNumber())
                        .build())
                .build();
    }

    private User createUserFromGooglePayload(GoogleIdToken.Payload result) {
        User u = User.builder()
                .fullname((String) result.get("name"))
                .email(result.getEmail())
                .role(UserRole.TOURIST)
                .avatarUrl(result.get("picture") != null ? (String) result.get("picture") : "defaultAvatar.png")
                .passwordHash(passwordEncoder.encode("google_oauth2_user"))
                .isActive(true)
                .createdAt(LocalDateTime.now())
                .build();
        return userRepository.save(u);
    }

    @Override
    @Transactional
    public void changePassword(String email, ChangePasswordRequest request) {
        if (!request.getNewPassword().equals(request.getConfirmNewPassword())) {
            throw new BadRequestException("Confirm password does not match the new password");
        }
        System.out.println("New: '" + request.getNewPassword() + "'");
        System.out.println("Confirm: '" + request.getConfirmNewPassword() + "'");

        validatePassword(request.getNewPassword());

        User user = userRepository.findByEmail(email)
                .orElseThrow(() -> new BadRequestException("User not found"));

        if (!passwordEncoder.matches(request.getOldPassword(), user.getPasswordHash())) {
            throw new BadRequestException("Current password is incorrect");
        }

        if (passwordEncoder.matches(request.getNewPassword(), user.getPasswordHash())) {
            throw new BadRequestException("New password cannot be the same as the current password");
        }

        user.setPasswordHash(passwordEncoder.encode(request.getNewPassword()));
        userRepository.save(user);
    }

    @Override
    public void sendResetPasswordOtp(String email) {
        User user = userRepository.findByEmail(email)
                .orElseThrow(() -> new BadRequestException("User not found"));
        String otp = generateVerifyToken();
        redisAuthService.saveOtp(user.getEmail(), otp);
        mailService.sendVerifyEmailAsync(user, EmailTemplate.RESET_PASSWORD, otp, appUrl);
    }

    @Override
    public void resetPassword(String email, String newPassword, String confirmPassword) {
        if (!newPassword.equals(confirmPassword)) {
            throw new BadRequestException("Passwords do not match");
        }
        validatePassword(newPassword);
        User user = userRepository.findByEmail(email)
                .orElseThrow(() -> new BadRequestException("User not found"));
        user.setPasswordHash(passwordEncoder.encode(newPassword));
        userRepository.save(user);
    }

    @Override
    public UserInfoResponse getCurrentUser(String email) {
        User user = userRepository.findByEmail(email)
                .orElseThrow(() -> new BadRequestException("User not found"));

        return UserInfoResponse.builder()
                .id(user.getId())
                .email(user.getEmail())
                .fullname(user.getFullname())
                .role(user.getRole())
                .avatarUrl(user.getAvatarUrl())
                .isActive(user.getIsActive())
                .isVerified(user.getIsVerified())
                .createdAt(user.getCreatedAt())
                .updatedAt(user.getUpdatedAt())
                .isBanned(user.getIsBanned())
                .kycVerified(user.getKycVerified())
                .phoneNumber(user.getPhoneNumber())
                .build();
    }

    @Override
    public AuthResponse refreshToken(String refreshToken) {
        redisAuthService.verifyRefreshToken(refreshToken);
        String userId = redisAuthService.getUserIdFromRefreshToken(refreshToken);
        redisAuthService.deleteRefreshToken(refreshToken);
        User user = userRepository.findById(UUID.fromString(userId))
                .orElseThrow(() -> new BadRequestException("User not found"));
        UserPrincipal userPrincipal = UserPrincipal.create(user);
        Authentication authentication = new UsernamePasswordAuthenticationToken(
                userPrincipal,
                null,
                userPrincipal.getAuthorities());
        return getAuthResponse(user, authentication);
    }

    @Override
    public void logout(String refreshToken) {
        redisAuthService.deleteRefreshToken(refreshToken);
    }

    private void validatePassword(String password) {
        if (password == null || password.length() < 8) {
            throw new BadRequestException("Password must be at least 8 characters long");
        }
        if (!password.matches(".*\\d.*")) {
            throw new BadRequestException("Password must contain at least one number");
        }
        if (!password.matches(".*[a-zA-Z].*")) {
            throw new BadRequestException("Password must contain at least one letter");
        }
    }
}
