---
config:
  theme: redux
  look: neo
---
classDiagram
    class AuthController {
        - AuthService authService
        + login(request: LoginRequest) ResponseEntity~ApiResponse~AuthResponse~~
    }

    class AuthService {
        <<interface>>
        + login(request: LoginRequest) AuthResponse
    }

    class AuthServiceImpl {
        - AuthenticationManager authenticationManager
        - UserRepository userRepository
        - PasswordEncoder passwordEncoder
        - JwtTokenProvider jwtTokenProvider
        - RedisAuthService redisAuthService
        + login(request: LoginRequest) AuthResponse
        - getAuthResponse(user: User, authentication: Authentication) AuthResponse
    }

    class AuthenticationManager {
        <<interface>>
        + authenticate(authentication: Authentication) Authentication
    }
    
    class JwtTokenProvider {
        + generateToken(authentication: Authentication) String
        + generateRefreshToken() String
    }

    class RedisAuthService {
        <<interface>>
        + saveRefreshToken(refreshToken: String, userId: String, jti: String) void
    }

    class LoginRequest {
        - String email
        - String password
    }

    class AuthResponse {
        - String accessToken
        - String refreshToken
        - String tokenType
        - UserInfoResponse userInfo
    }

    class UserRepository {
        <<interface>>
        + findById(id: UUID) Optional~User~
    }

    class PasswordEncoder {
        <<interface>>
        + encode(rawPassword: CharSequence) String
    }

    class User {
        - UUID id
        - String email
        - String passwordHash
        - Boolean isActive
    }

    %% Relationships
    AuthController ..> AuthService
    AuthService <|.. AuthServiceImpl 

    AuthController ..> LoginRequest
    AuthResponse <.. AuthController

    AuthServiceImpl ..> AuthenticationManager
    AuthServiceImpl ..> UserRepository
    AuthServiceImpl ..> PasswordEncoder
    AuthServiceImpl ..> JwtTokenProvider
    AuthServiceImpl ..> RedisAuthService

    AuthServiceImpl ..> LoginRequest
    AuthServiceImpl ..> AuthResponse
    AuthServiceImpl ..> User

    UserRepository ..> User
